--- a/index.html
+++ b/index.html
@@ -1,126 +1,125 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
-      rel="stylesheet"
-    />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <title>Document</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet" />
 
-    <style>
-      * {
-        font-family: "Manrope", sans-serif;
-      }
-    </style>
-  </head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>Document</title>
 
-  <body>
-    <!-- banner section -->
-    <section class="grid cols-1 md:grid-cols-2 container mx-auto">
-      <div class="left-banner space-y-[30px]">
-        <h2 class="text-[80px] font-bold">
-          It's good <br />
-          tea time at The Tea House
-        </h2>
-        <p class="text-[#777777]">
-          Tea and Botanical Solutions Supplier Give Optimum <br />
-          Satisfaction To Your Taste Buds.
-        </p>
-        <button
-          class="py-3 px-5 rounded-md text-white font-semibold bg-red-500 bg-linear-to-r from-[#FF8938] to-[#FF0000]"
-        >
-          Explore More
-          <span class="-rotate-45 inline-block"
-            ><i class="fa-solid fa-arrow-right-long"></i
-          ></span>
-        </button>
-      </div>
-      <div class="right-banner flex justify-end items-end relative">
-        <img src="./images/banner.png" alt="" />
-        <div
-          class="bg-white rounded-xl shadow-2xl flex justify-center gap-2 items-center w-[250px] absolute bottom-[15px] left-[220px] py-[25px] px-[15px]"
-        >
-          <img src="./images/banner_star.png" alt="" />
-          <div>
-            <h2 class="font-bold text-2xl">5.00</h2>
-            <p>Trust Rating</p>
-          </div>
+  <style>
+    * {
+      font-family: "Manrope", sans-serif;
+    }
+  </style>
+</head>
+
+<body>
+  <!-- banner section -->
+  <section class="grid cols-1 md:grid-cols-2 container mx-auto">
+    <div class="left-banner space-y-[30px]">
+      <h2 class="text-[80px] font-bold">
+        It's good <br />
+        tea time at The Tea House
+      </h2>
+      <p class="text-[#777777]">
+        Tea and Botanical Solutions Supplier Give Optimum <br />
+        Satisfaction To Your Taste Buds.
+      </p>
+      <button
+        class="py-3 px-5 rounded-md text-white font-semibold bg-red-500 bg-linear-to-r from-[#FF8938] to-[#FF0000]">
+        Explore More
+        <span class="-rotate-45 inline-block"><i class="fa-solid fa-arrow-right-long"></i></span>
+      </button>
+    </div>
+    <div class="right-banner flex justify-end items-end relative">
+      <img src="./images/banner.png" alt="" />
+      <div
+        class="bg-white rounded-xl shadow-2xl flex justify-center gap-2 items-center w-[250px] absolute bottom-[15px] left-[220px] py-[25px] px-[15px]">
+        <img src="./images/banner_star.png" alt="" />
+        <div>
+          <h2 class="font-bold text-2xl">5.00</h2>
+          <p>Trust Rating</p>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- featured section -->
-    <section class="container mx-auto my-[90px]">
-      <!-- featured section header -->
-      <div class="text-center max-w-[65%] mx-auto mb-[50px] ">
-        <h2 class="font-bold text-[45px]">Our Featured Products</h2>
-        <p class="text-[#777777]">
-          There are many variations of passages of Lorem Ipsum available, but
-          the majority have suffered alteration in some form, by injected
-          humour, or randomised words which don't look even slightly believable.
-        </p>
-      </div>
+  <!-- featured section -->
+  <section class="container mx-auto my-[90px]">
+    <!-- featured section header -->
+    <div class="text-center max-w-[65%] mx-auto mb-[50px] ">
+      <h2 class="font-bold text-[45px]">Our Featured Products</h2>
+      <p class="text-[#777777]">
+        There are many variations of passages of Lorem Ipsum available, but
+        the majority have suffered alteration in some form, by injected
+        humour, or randomised words which don't look even slightly believable.
+      </p>
+    </div>
 
-      <div class="featured-card-parent grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
-        <div class="featured-card bg-linear-to-r from-[#F4F4F4] to-[#F4F4F4] p-7 text-center rounded-md">
-          <img src="./images/tea-1.png" alt="" class="mx-auto mb-4">
-          <h2 class="font-semibold text-xl">Milk Tea</h2>
-          <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
-
-        </div>
-         <div class="featured-card bg-linear-to-r from-[#F4F4F4] to-[#FFFFFF] p-7 text-center rounded-md">
-          <img src="./images/tea-2.png" alt="" class="mx-auto mb-4">
-          <h2 class="font-semibold text-xl">Black Tea</h2>
-          <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
-
-        </div>
-         <div class="featured-card bg-linear-to-r from-[#F4F4F4] to-[#FFFFFF] p-7 text-center rounded-md">
-          <img src="./images/tea-3.png" alt="" class="mx-auto mb-4>
-          <h2 class="font-semibold text-xl">Green Tea</h2>
-          <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
-
-        </div>
-         <div class="featured-card bg-linear-to-r from-[#F4F4F4] to-[#FFFFFF] p-7 text-center rounded-md">
-          <img src="./images/tea-4.png" alt="" class="mx-auto mb-4>
-          <h2 class="font-semibold text-xl">Lemon Tea</h2>
-          <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
-
-        </div>
+    <div class="featured-card-parent grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
+      <div class="featured-card bg-linear-to-r from-[#F4F4F4] to-[#F4F4F4] p-7 text-center rounded-md">
+        <img src="./images/tea-1.png" alt="" class="mx-auto mb-4">
+        <h2 class="font-semibold text-xl">Milk Tea</h2>
+        <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
 
       </div>
-    </section>
+      <div class="featured-card bg-linear-to-r from-[#F4F4F4] to-[#FFFFFF] p-7 text-center rounded-md">
+        <img src="./images/tea-2.png" alt="" class="mx-auto mb-4">
+        <h2 class="font-semibold text-xl">Black Tea</h2>
+        <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
 
-    <!-- great tea section -->
-     <section class="container mx-auto grid grid-cols-2 gap-3">
-      <div class="great-tea-left flex gap-4">
-        <div class="h-[100px] w-[100px] bg-purple-500"></div>
-        <div class="h-[100px] w-[100px] bg-purple-500"></div>
-        <div class="h-[100px] w-[100px] bg-purple-500"></div>
-        <div class="h-[100px] w-[100px] bg-purple-500"></div>
       </div>
-      <div class="great-tea-right space-y-4">
-        <h2 class="text-[45px] font-bold">Great Tea, Freshly Presented</h2>
-        <p class="text-[#777777]">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
-        <h2 class="font-bold text-[20px]">Unique Taste</h2>
-        <p class="text-[#777777]">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
-        <h3 class="font-bold text-[20px]">Premium Quality</h3>
-        <p class="text-[#777777]">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+      <div class="featured-card bg-linear-to-r from-[#F4F4F4] to-[#FFFFFF] p-7 text-center rounded-md">
+        <img src="./images/tea-3.png" alt="" class="mx-auto mb-4>
+          <h2 class=" font-semibold text-xl">Green Tea</h2>
+        <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+
+      </div>
+      <div class="featured-card bg-linear-to-r from-[#F4F4F4] to-[#FFFFFF] p-7 text-center rounded-md">
+        <img src="./images/tea-4.png" alt="" class="mx-auto mb-4>
+          <h2 class=" font-semibold text-xl">Lemon Tea</h2>
+        <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+
       </div>
 
-      
-     </section>
-  </body>
+    </div>
+  </section>
+
+  <!-- great tea section -->
+  <section class="container mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 mb-[90px]">
+    <div class="great-tea-left flex gap-[30px] grid grid-cols-2 grid-rows-3">
+      <div class="bg-gradient-to-r from-[#FF0000] to-[#FF8938] opacity-10 rounded-md"></div>
+      <div class="row-span-2 flex justify-center items-center bg-[#E6A623] rounded-md">
+        <img src="./images/fresh-1.png" alt="">
+      </div>
+      <div class="row-span-2 flex justify-center items-center bg-[#577639] rounded-md">
+        <img src="./images/fresh-2.png" alt="">
+      </div>
+      <div class="bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF] rounded-md"></div>
+    </div>
+    <div class="great-tea-right space-y-4">
+      <h2 class="text-[45px] font-bold">Great Tea, Freshly Presented</h2>
+      <p class="text-[#777777]">The meaning of gong cha is chanese is to provide the best tea to emperor from all
+        possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been
+        deeply appreciated by its custoers because of good words of mouth and unique customized service orginated from
+        Taiwan.</p>
+      <h2 class="font-bold text-[20px]">Unique Taste</h2>
+      <p class="text-[#777777]">A Unique and different style from other teapots gives a luxurious and minimalist
+        impression</p>
+      <h3 class="font-bold text-[20px]">Premium Quality</h3>
+      <p class="text-[#777777]">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+    </div>
+
+
+  </section>
+</body>
+
 </html>
