Completed meet our clients left section

--- a/index.html
+++ b/index.html
@@ -120,6 +120,19 @@
 
 
   </section>
+
+  <!-- meet our super clients section -->
+   <section class="container mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 mb-[90px] border-2 border-red-500 bg-gradient-to-r from-[#FF8938] to-[#FF0000] p-[70px]">
+    <div class="meet-our-client-left border-2 border-blue-500 text-white space-y-4">
+      <h2 class="text-[45px] font-bold">Meet Our Super Clients</h2>
+      <p class="font-medium text-[#f4f4f4]"> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+      <button
+        class="py-3 px-5 rounded-md bg-white font-semibold"><span class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] bg-clip-text text-transparent"> Show All</span>>
+       
+      </button>
+    </div>
+    <div class="meet-our-client-right border-2 border-green-500"></div>
+   </section>
 </body>
 
 </html>
